--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
 
-    <style>
+    <!-- <style>
       #content {
         width: 80%;
         min-height: 2000px;
@@ -34,7 +34,7 @@
         justify-content: center;
         align-items: center;
       }
-    </style>
+    </style> -->
   </head>
 
   <body class="body">
