finished testresult  css

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, minimum-scale=1.00, maximum-scale=1.00, user-scalable=no"
+    />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>DC Superheros Personality</title>
     <link
@@ -13,28 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Bangers&display=swap"
       rel="stylesheet"
     />
-
-    <!-- <style>
-      #content {
-        width: 80%;
-        min-height: 2000px;
-        border: 1px solid black;
-        margin: 150px auto;
-      }
-
-      #btn {
-        width: 100px;
-        height: 30px;
-        background-color: crimson;
-        position: absolute;
-        top: 80px;
-        left: 30px;
-        border-radius: 15px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-      }
-    </style> -->
+    <base href="/" />
   </head>
 
   <body class="body">
