--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>DC Superheros Personality</title>
+    <!-- <link rel="icon" sizes="16x16" href="img/mb.ico" /> -->
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap"
       rel="stylesheet"
@@ -40,7 +41,7 @@
     <footer class="footer_container">
       <div class="footer_wrapper">
         <div class="copyright">
-          ©2019 @pitschi74
+          ©2019 @Petra Tsesmetzi
         </div>
         <nav class="links">
           <ul>
@@ -98,7 +99,5 @@
         </div>
       </div>
     </footer>
-
-    <!-- <script type="module" src="./js/app.js"></script> -->
   </body>
 </html>
