--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>DC Superheros Personality</title>
-    <link rel="icon" sizes="16x16" href="./imgs/mb.ico" />
+    <link rel="icon" sizes="16x16" href="imgs/mb.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap"
       rel="stylesheet"
